--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ unittests:
     - pip3 install .
     - pip3 install -r test-requirements.txt
   script:
-    - pytest
+    - pytest -sv --cov=cinverman --cov-report term-missing   
