--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,22 @@ stages:
 
 unittests:
   stage: test
-  image: python:3.6-slim-buster
+  image: ghcr.io/nicceboy/multipython:latest
+  before_script:
+    - apt-get update && apt-get install -y libsqlite3-0
+    - echo "Current versions:"
+    - source ~/.bashrc
+    - python3.6 -V
+    - python3.7 -V
+    - python3.8 -V
+    - python3.9 -V
+  services:
+  - docker:dind
+  script:
+    - source ~/.bashrc
   services:
     - docker:dind
-  before_script:
-    - apt-get update && apt-get install -y docker
-    - pip3 install .
-    - pip3 install -r test-requirements.txt
   script:
-    - pytest -sv --cov=cincanregistry --cov-report term-missing   
+    # - pytest -sv --cov=cincanregistry --cov-report term-missing   
+    - source ~/.bashrc && tox -- --cov=cincanregistry tests
+
