Dependecies with tox fixed

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,9 @@ envlist = py36,py37,py38,py39
 [testenv]
 passenv = DOCKER_HOST DOCKER_CERT_PATH DOCKER_TLS_VERIFY
 platform = linux2|darwin|linux
-deps = 
-    pytest
-    pytest-cov
+deps = -rtest-requirements.txt
 install_command =
-    pip install -U {opts} {packages} && pip install -r test-requirements.txt
+    pip install -U {opts} {packages} 
 # add posargs from command line
 commands = 
         pytest {posargs} 
