Skip unfinished tests

--- a/tox.ini
+++ b/tox.ini
@@ -12,5 +12,6 @@ commands =
         pytest {posargs} 
 [pytest]
 addopts = -sv --basetemp=".tmp/"
-markers = "not-in-use"
+markers = 
+    wip: work in progress test
 
