Test artifact upload

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
   - test
 
 unittests:
+  except:
+    - schedules
   stage: test
   image: ghcr.io/nicceboy/multipython:latest
   before_script:
@@ -27,9 +29,14 @@ unittests:
 scrape_versions:on-schedule:
   image: python:3.9-buster
   before_script:
-    - apt-get update && apt-get install -y libsqlite3-0
+    #   - apt-get update && apt-get install -y libsqlite3-0
     - python setup.py install
   only:
     - schedules
   script:
     - cincanregistry list -r versions
+  artifacts:
+    paths:
+      - .cincan/cache/tooldb.sqlite
+    expire_in: never
+    public: true
